--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,40 @@
-<h2>Sign up</h2>
+<main class="flex flex-col items-center">
+  <%= image_tag asset_path('brand-logo.svg'), class: "h-16 w-16 mt-14" %>
+  <h2 class="font-bold text-2xl">Sign up</h2>
+  <hr class="w-2/3 my-4 lg:w-1/3">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+  <div class="mt-6 w-3/4">
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
+
+    <div class="form-inputs  space-y-4 flex flex-col items-center mx-12 md:mx-0">
+      <%= f.input :email,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "email", class: "px-4 py-2 border rounded focus:outline-none focus:border-blue-500", placeholder: "johndoe@email.com" },
+                  wrapper_html: { class: "flex justify-between w-full md:w-1/2"} %>
+      <%= f.input :password,
+                  required: true,
+                  input_html: { autocomplete: "new-password" , class: "px-4 py-2 border rounded focus:outline-none focus:border-blue-500", placeholder: "******" },
+                  wrapper_html: { class: "flex justify-between w-full md:w-1/2"} %>
+      <%= f.input :password_confirmation,
+                  required: true,
+                  input_html: { autocomplete: "new-password", class: "px-4 py-2 border rounded focus:outline-none focus:border-blue-500", placeholder: "******" },
+                  wrapper_html: { class: "flex justify-between w-full md:w-1/2"} %>
+      <div class="form-actions mt-6 w-full flex justify-center">
+        <%= f.button :submit, "Sign up", class: "block w-full md:w-1/2 text-white bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 hover:bg-gradient-to-br focus:ring-1 focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-600 shadow-lg shadow-pink-500/50 dark:shadow-lg dark:shadow-pink-800/80 font-medium rounded-lg text-md px-5 py-2.5 text-center mr-2 mb-2" %>
+      </div>
+    </div>
+
+  <% end %>
+
+
+    <div class="flex flex-col items-center mx-12 md:mx-0 mb-12">
+      <p class="text-ld mt-6 w-full md:w-1/2 flex justify-start mb-4">Do you already have an account?</p>
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+</main>
