--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,17 +3,39 @@
   <h2 class="font-bold text-2xl">Sign up</h2>
   <hr class="w-2/3 my-4 lg:w-1/3">
 
-  <div class="mt-6 w-3/4">
+  <div class="mt-6 w-full lg:w-3/4">
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
 
     <div class="form-inputs  space-y-4 flex flex-col items-center mx-12 md:mx-0">
+
+      <%= f.input :full_name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "email", class: "px-4 py-2 border rounded focus:outline-none focus:border-blue-500", placeholder: "John Doe" },
+                  wrapper_html: { class: "flex justify-between w-full md:w-1/2"} %>
+
+      <%= f.input :username,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "email", class: "px-4 py-2 border rounded focus:outline-none focus:border-blue-500", placeholder: "JohnDoe" },
+                  wrapper_html: { class: "flex justify-between w-full md:w-1/2"} %>
+
+      <%= f.input :country,
+                  collection: CS.countries.values,
+                  autofocus: true,
+                  input_html: { autocomplete: "email", class: "px-4 py-2 border rounded focus:outline-none focus:border-blue-500", style: "width: 247.3px;" },
+                  prompt: "Select country",
+                  wrapper_html: { class: "flex justify-between w-full md:w-1/2"}
+                   %>
+
       <%= f.input :email,
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "email", class: "px-4 py-2 border rounded focus:outline-none focus:border-blue-500", placeholder: "johndoe@email.com" },
                   wrapper_html: { class: "flex justify-between w-full md:w-1/2"} %>
+
       <%= f.input :password,
                   required: true,
                   input_html: { autocomplete: "new-password" , class: "px-4 py-2 border rounded focus:outline-none focus:border-blue-500", placeholder: "******" },
