--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,8 +14,11 @@
   </article>
 
 
-  <article class="grid grid-cols-1 md:grid-cols-2 md:col-span2 xl:grid-cols-4 xl:col-span-4 col-span-5 gap-3 mt-16 content-center w-full">
-
+  <article class="grid grid-cols-1 md:grid-cols-2 md:col-span2 xl:grid-cols-4 xl:col-span-4 col-span-5 gap-3 mt-3 content-center w-full">
+    <div class="col-span-4 bg-red-200">
+      <p>yo</p>
+    </div>
+    <hr class="col-span-4">
     <%# Render offers for homepage %>
 
     <% @offers.each do |offer| %>
