--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -1,3 +1,104 @@
+<div
+  id="carouselExampleCaptions"
+  class="relative"
+  data-te-carousel-init
+  data-te-ride="carousel">
+  <!--Carousel indicators-->
+  <div
+    class="absolute bottom-0 left-0 right-0 z-[2] mx-[15%] mb-4 flex list-none justify-center p-0"
+    data-te-carousel-indicators>
+    <button
+      type="button"
+      data-te-target="#carouselExampleCaptions"
+      data-te-slide-to="0"
+      data-te-carousel-active
+      class="mx-[3px] box-content h-[3px] w-[30px] flex-initial cursor-pointer border-0 border-y-[10px] border-solid border-transparent bg-white bg-clip-padding p-0 -indent-[999px] opacity-50 transition-opacity duration-[600ms] ease-[cubic-bezier(0.25,0.1,0.25,1.0)] motion-reduce:transition-none"
+      aria-current="true"
+      aria-label="Slide 1"></button>
+    <button
+      type="button"
+      data-te-target="#carouselExampleCaptions"
+      data-te-slide-to="1"
+      class="mx-[3px] box-content h-[3px] w-[30px] flex-initial cursor-pointer border-0 border-y-[10px] border-solid border-transparent bg-white bg-clip-padding p-0 -indent-[999px] opacity-50 transition-opacity duration-[600ms] ease-[cubic-bezier(0.25,0.1,0.25,1.0)] motion-reduce:transition-none"
+      aria-label="Slide 2"></button>
+    <button
+      type="button"
+      data-te-target="#carouselExampleCaptions"
+      data-te-slide-to="2"
+      class="mx-[3px] box-content h-[3px] w-[30px] flex-initial cursor-pointer border-0 border-y-[10px] border-solid border-transparent bg-white bg-clip-padding p-0 -indent-[999px] opacity-50 transition-opacity duration-[600ms] ease-[cubic-bezier(0.25,0.1,0.25,1.0)] motion-reduce:transition-none"
+      aria-label="Slide 3"></button>
+  </div>
+
+  <!--Carousel items-->
+  <div
+    class="relative w-full overflow-hidden after:clear-both after:block after:content-[''] h-[24rem] sm:h-[28rem] md:h-[32rem] lg:h-[46rem]" id="carousel-items">
+
+
+    <% @vehicle.photos.each_with_index do |photo, index| %>
+      <div class="relative hidden float-left -mr-[100%] w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+          style="backface-visibility: hidden" id="carousel-item-<%= index %>">
+        <%= cl_image_tag photo.key, class: "w-full h-[24rem] sm:h-[28rem] md:h-[32rem] lg:h-[46rem] object-cover" %>
+      </div>
+    <% end %>
+
+
+  <% unless @vehicle.photos.count == 1 %>
+    <!--Carousel controls - prev item-->
+    <button
+      class="absolute bottom-0 left-0 top-0 z-[1] flex w-[15%] items-center justify-center border-0 bg-none p-0 text-center text-white opacity-50 transition-opacity duration-150 ease-[cubic-bezier(0.25,0.1,0.25,1.0)] hover:text-white hover:no-underline hover:opacity-90 hover:outline-none focus:text-white focus:no-underline focus:opacity-90 focus:outline-none motion-reduce:transition-none"
+      type="button"
+      data-te-target="#carouselExampleCaptions"
+      data-te-slide="prev"
+      id= "prev-button">
+      <span class="inline-block h-8 w-8">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="h-6 w-6">
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15.75 19.5L8.25 12l7.5-7.5" />
+        </svg>
+      </span>
+      <span
+        class="!absolute !-m-px !h-px !w-px !overflow-hidden !whitespace-nowrap !border-0 !p-0 ![clip:rect(0,0,0,0)]"
+        >Previous</span
+      >
+    </button>
+    <!--Carousel controls - next item-->
+    <button
+      class="absolute bottom-0 right-0 top-0 z-[1] flex w-[15%] items-center justify-center border-0 bg-none p-0 text-center text-white opacity-50 transition-opacity duration-150 ease-[cubic-bezier(0.25,0.1,0.25,1.0)] hover:text-white hover:no-underline hover:opacity-90 hover:outline-none focus:text-white focus:no-underline focus:opacity-90 focus:outline-none motion-reduce:transition-none"
+      type="button"
+      data-te-target="#carouselExampleCaptions"
+      data-te-slide="next"
+      id= "next-button">
+      <span class="inline-block h-8 w-8">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="h-6 w-6">
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+        </svg>
+      </span>
+      <span
+        class="!absolute !-m-px !h-px !w-px !overflow-hidden !whitespace-nowrap !border-0 !p-0 ![clip:rect(0,0,0,0)]"
+        >Next</span
+      >
+    </button>
+  <% end %>
+
+</div>
+
 <div>
   <h1 class="font-bold text-4xl">Vehicles#show</h1>
   <p>Find me in app/views/vehicles/show.html.erb</p>
@@ -8,10 +109,67 @@
 
 
 
+
+
+
+
+
+
+
 <script>
   $(document).ready(function() {
+    // Back button
     $("#back-button").click(function() {
       window.history.back();
     });
+
+    // Carousel
+    var itemIndex = 0
+    console.log("Displayinng carousel");
+    $(`#carousel-item-${itemIndex}`).show();
+
+    $("#prev-button").click(function() {
+      const prevItem = $(`#carousel-item-${itemIndex - 1}`);
+      const totalItems = $("#carousel-items div").length;
+      const lastItemIndex = totalItems - 1;
+
+      if (itemIndex === 0) {
+        console.log("Previous button clicked, looping to last item");
+        $(`#carousel-item-${itemIndex}`).fadeOut(750);
+        itemIndex = lastItemIndex;
+        $(`#carousel-item-${itemIndex}`).fadeIn(750);
+        console.log(`Looped to last item, index: ${itemIndex}`);
+      } else {
+        console.log("Previous button clicked");
+        $(`#carousel-item-${itemIndex}`).fadeOut(750);
+        itemIndex -= 1;
+        $(`#carousel-item-${itemIndex}`).fadeIn(750);
+        console.log(`Item index: ${itemIndex}`);
+      }
+    });
+
+    $("#next-button").click(function() {
+      const nextItem = $(`#carousel-item-${itemIndex + 1}`);
+
+      if (nextItem.length > 0) {
+        console.log("Next button clicked");
+        $(`#carousel-item-${itemIndex}`).fadeOut(750);
+        itemIndex += 1;
+        $(`#carousel-item-${itemIndex}`).fadeIn(750);
+        console.log(`Item index: ${itemIndex}`);
+      } else {
+        console.log("Next button clicked");
+        $(`#carousel-item-${itemIndex}`).fadeOut(750);
+        itemIndex = 0; // Use = for assignment
+        $(`#carousel-item-${itemIndex}`).fadeIn(750);
+        console.log(`No more items, resetting to index 0: ${itemIndex}`);
+      }
+    });
+
+
   });
+
+
+
+
 </script>
