--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,17 +1,71 @@
-<div>
-  <h1 class="font-bold text-4xl">Vehicles#show</h1>
-  <p>Find me in app/views/vehicles/show.html.erb</p>
-  <p><%= @service.title %></p>
-  <p><%= @service.description %></p>
-  <%= link_to "Back", "javascript:void(0);", id: "back-button" %>
-</div>
+
+<%# Carousel %>
+<section id="carousel">
+  <%= render "shared/carousel", item: @service %>
+</section>
+
+<%= content_tag(:section, id: "info") do %>
+  <%= render "shared/item_main", item: @service%>
+<% end %>
+
+
 
 
 
 <script>
   $(document).ready(function() {
+    // Back button
     $("#back-button").click(function() {
       window.history.back();
     });
+
+    // Carousel
+    var itemIndex = 0
+    console.log("Displayinng carousel");
+    $(`#carousel-item-${itemIndex}`).show();
+
+    $("#prev-button").click(function() {
+      const prevItem = $(`#carousel-item-${itemIndex - 1}`);
+      const totalItems = $("#carousel-items div").length;
+      const lastItemIndex = totalItems - 1;
+
+      if (itemIndex === 0) {
+        console.log("Previous button clicked, looping to last item");
+        $(`#carousel-item-${itemIndex}`).fadeOut(750);
+        itemIndex = lastItemIndex;
+        $(`#carousel-item-${itemIndex}`).fadeIn(750);
+        console.log(`Looped to last item, index: ${itemIndex}`);
+      } else {
+        console.log("Previous button clicked");
+        $(`#carousel-item-${itemIndex}`).fadeOut(750);
+        itemIndex -= 1;
+        $(`#carousel-item-${itemIndex}`).fadeIn(750);
+        console.log(`Item index: ${itemIndex}`);
+      }
+    });
+
+    $("#next-button").click(function() {
+      const nextItem = $(`#carousel-item-${itemIndex + 1}`);
+
+      if (nextItem.length > 0) {
+        console.log("Next button clicked");
+        $(`#carousel-item-${itemIndex}`).fadeOut(750);
+        itemIndex += 1;
+        $(`#carousel-item-${itemIndex}`).fadeIn(750);
+        console.log(`Item index: ${itemIndex}`);
+      } else {
+        console.log("Next button clicked");
+        $(`#carousel-item-${itemIndex}`).fadeOut(750);
+        itemIndex = 0; // Use = for assignment
+        $(`#carousel-item-${itemIndex}`).fadeIn(750);
+        console.log(`No more items, resetting to index 0: ${itemIndex}`);
+      }
+    });
+
+
   });
+
+
+
+
 </script>
