--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,13 @@
+
 <nav class="bg-gray-800 sticky top-0 z-50">
+
   <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+
     <div class="relative flex h-16 items-center justify-between">
+
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+
+
         <!-- Mobile menu button-->
         <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false" id="mobile-menu-button">
           <span class="absolute -inset-0.5"></span>
@@ -24,16 +30,19 @@
           </svg>
         </button>
       </div>
+
       <div class="flex flex-1 items-center justify-center md:items-stretch sm:justify-start">
+
+
         <div class="flex flex-shrink-0 items-center">
-          <%= link_to root_path do %>
+          <%= link_to home_path do %>
             <%= image_tag asset_path('brand-logo.svg'), class: "h-16 w-16" %>
           <% end %>
         </div>
         <div class="hidden sm:ml-6 sm:block md:flex items-center justify-center">
           <div class="flex items-center justify-center space-x-4">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <a href="/" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Home</a>
+            <a href="/home" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Home</a>
             <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Team</a>
             <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Projects</a>
             <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Calendar</a>
@@ -89,8 +98,9 @@
           </div>
         <% else %>
           <%= link_to new_user_session_path, class: "flex justify-center align-center" do %>
-            <button type="button" class="text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 shadow-lg shadow-cyan-500/50 dark:shadow-lg dark:shadow-cyan-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Get started</button>
+            <button type="button" class="text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 shadow-lg shadow-cyan-500/50 dark:shadow-lg dark:shadow-cyan-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center hidden sm:block">Get started</button>
           <% end %>
+          <button type="button" class="text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 shadow-lg shadow-cyan-500/50 dark:shadow-lg dark:shadow-cyan-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center absolute sticky top-3 left-6 z-50 sm:hidden" id="back-button">Back</button>
         <% end %>
 
       </div>
@@ -101,7 +111,8 @@
   <div class="hidden sm:hidden" id="mobile-menu">
     <div class="space-y-1 px-2 pb-3 pt-2">
       <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-      <a href="/" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Home</a>
+      <a href="/home" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Home</a>
+      <%= link_to "Get started", new_user_session_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"  %>
       <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Team</a>
       <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Projects</a>
       <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Calendar</a>
@@ -109,8 +120,20 @@
   </div>
 </nav>
 
+
+
 <script>
 $(document).ready(function () {
+
+  if (window.location.href === "http://127.0.0.1:3000/home") {
+    console.log("hiding the button");
+    $("#back-button").hide();
+    } else {
+    $("#back-button").click(function() {
+      window.history.back();
+    });
+  }
+
   $("#dropdown-btn").click(function () {
     console.log($("#dropdown-btn"));
     $("#profile-dropdown").slideToggle(200);
@@ -120,6 +143,11 @@ $(document).ready(function () {
     console.log("button clicked")
     $("#mobile-menu").slideToggle();
   })
+
+  $("#back-button").click(function() {
+    console.log(document.referrer);
+    window.history.back();
+  });
 
 });
 
