--- a/app/views/shared/_item_main.html.erb
+++ b/app/views/shared/_item_main.html.erb
@@ -36,16 +36,18 @@
     </div>
 
     <%# TODO: Geolocation. Map goes here. %>
+    <p>Here is location</p>
     <div id="location" class="hidden w-full md:w-3/4 lg:w-1/2 xl:w-2/5 p-4">
-      <p>Here is location</p>
+      <div class="shadow-xl" style="width: 100%; height: 600px;"
+        data-controller="map"
+        data-map-markers-value="<%= @markers.to_json %>"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
     </div>
-
-
-
   </main>
 
-
   <%# TODO:  Profile %>
+
 
   <%= link_to "Back", "javascript:void(0);", id: "back-button" %>
 </div>
@@ -95,6 +97,8 @@
 
 
 <script>
+
+$(document).ready(function () {
   $("#group-buttons button").click(function(e) {
     $(this).siblings().removeClass("bg-gray-100 text-blue-700");
     $(this).addClass("bg-gray-100 text-blue-700");
@@ -102,6 +106,8 @@
     const content = $(`#${this.id.split("-")[1]}`)
     content.siblings().hide();
     content.show();
-
   });
+});
+
+
 </script>
