--- a/app/views/shared/_item_main.html.erb
+++ b/app/views/shared/_item_main.html.erb
@@ -38,7 +38,7 @@
     <%# TODO: Geolocation. Map goes here. %>
     <p>Here is location</p>
     <div id="location" class="w-full md:w-3/4 lg:w-1/2 xl:w-2/5 flex justify-center">
-      <div class="shadow-xl" style="width: 730px; height: 610px;"
+      <div class="shadow-xl overflow-hidden" style="width: 730px; height: 610px;"
         data-controller="map"
         data-map-markers-value="<%= @markers.to_json %>"
         data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
@@ -98,19 +98,26 @@
 <script>
 
 $(document).ready(function () {
-  $("#group-buttons button").click(function(e) {
-    $(this).siblings().removeClass("bg-gray-100 text-blue-700");
-    $(this).addClass("bg-gray-100 text-blue-700");
+  const groupButtons = $("#group-buttons button");
+  const locationContent = $("#location");
 
-    const content = $(`#${this.id.split("-")[1]}`)
+  groupButtons.on("click", function() {
+    const $this = $(this);
+    const buttonId = $this.attr("id");
+    const contentId = buttonId.split("-")[1];
+    const content = $(`#${contentId}`);
+    const $siblings = $this.siblings();
+
+    $siblings.removeClass("bg-gray-100 text-blue-700");
+    $this.addClass("bg-gray-100 text-blue-700");
+
     content.siblings().hide();
     content.show();
   });
 
-
-  $("#location").addClass("hidden p-1 md:p-2 lg:p-4 xl:p-6");
-  console.log($("canvas"));
+  locationContent.addClass("hidden p-1 md:p-2 lg:p-4 xl:p-6");
 });
+
 
 
 </script>
