Done with show pages for now.

--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -5,7 +5,7 @@
 </section>
 
 <%= content_tag(:section, id: "info") do %>
-  <%= render "shared/item_main", item: @property%>
+  <%= render "shared/item_main", item: @property, user: @user %>
 <% end %>
 
 
