--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -5,5 +5,5 @@
 </section>
 
 <%= content_tag(:section, id: "info") do %>
-  <%= render "shared/item_main", item: @vehicle%>
+  <%= render "shared/item_main", item: @vehicle, user: @user %>
 <% end %>
