--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -5,7 +5,7 @@
 </section>
 
 <%= content_tag(:section, id: "info") do %>
-  <%= render "shared/item_main", item: @service%>
+  <%= render "shared/item_main", item: @service, user: @user %>
 <% end %>
 
 
