--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,12 +44,20 @@
         <div class="w-full h-[250px]">
             <img src="https://vojislavd.com/ta-template-demo/assets/img/profile-background.jpg" class="w-full h-full rounded-tl-lg rounded-tr-lg">
         </div>
-        <div class="flex flex-col items-center -mt-20">
+        <div class="flex flex-col justify-center items-center -mt-20">
             <%# User name %>
             <% if @user.profile_photo.key.present? %>
               <%= cl_image_tag @user.profile_photo.key, class: "w-60 h-60 object-cover border-4 border-white rounded-full" %>
+              <% if @user == current_user %>
+              <% end %>
             <% else %>
               <%= image_tag asset_path('user_icon'), class: "w-60 h-60 rounded-full border-4 border-white bg-gray-50" %>
+            <% end %>
+            <% if @user == current_user %>
+              <%= button_tag(type: "submit", class: "flex justify-center text-center relative bottom-[4.61rem] -right-20", id: "edit-button") do %>
+                <%= inline_svg_tag("user_edit.svg", class: "h-10 w-10 rounded-full bg-blue-400 hover:bg-blue-700") %>
+              <% end %>
+
             <% end %>
             <%# <img src="https://vojislavd.com/ta-template-demo/assets/img/profile.jpg" class="w-40 border-4 border-white rounded-full"> %>
             <div class="flex items-center space-x-2 mt-2">
@@ -230,6 +238,8 @@
         </div>
     </div>
 </div>
+
+<%= render "shared/edit_user" %>
 
 
 <script>
