--- a/app/views/shared/_offer.html.erb
+++ b/app/views/shared/_offer.html.erb
@@ -1,2 +1,16 @@
-<%= cl_image_tag offer.offerable.photos.first.key, class: "object-cover w-full xl:w-96 h-96 md:h-80 lg:h-60 rounded-lg" %>
+<div class="relative">
+  <%= cl_image_tag offer.offerable.photos.first.key, class: "object-cover w-full xl:w-96 h-96 md:h-80 lg:h-60 rounded-lg" %>
+  <%= button_tag(type: "submit", class: "flex justify-end p-2.5 bg-green-500 rounded-xl absolute top-12 right-0 hover:rounded-3xl hover:bg-green-600 transition-all duration-300 text-white opacity-90", id: "edit-about-button") do %>
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+    </svg>
+  <% end %>
+
+  <%= button_tag(type: "submit", class: "flex justify-end p-2.5 bg-red-500 rounded-xl absolute top-0 right-0 hover:rounded-3xl hover:bg-red-600 transition-all duration-300 text-white opacity-90", id: "edit-about-button") do %>
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+    </svg>
+  <% end %>
+</div>
+
 <p><%= offer.title %></p>
