--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -104,7 +104,7 @@
               <div class="flex justify-between">
                 <h4 class="text-xl text-gray-900 font-bold">Personal Info</h4>
                 <% if @user == current_user %>
-                  <%= button_tag(type: "submit", class: "flex justify-end p-2.5 bg-green-500 rounded-xl hover:rounded-3xl hover:bg-green-600 transition-all duration-300 text-white", id: "edit-about-button") do %>
+                  <%= button_tag(type: "submit", class: "flex justify-end p-2.5 bg-green-500 rounded-xl hover:rounded-3xl hover:bg-green-600 transition-all duration-300 text-white", id: "edit-personal-info-button") do %>
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
                     </svg>
